--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-elements": "^0.19.1",
+    "react-native-firebase": "^5.2.0",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-paper": "^2.4.0",
     "react-native-popup-menu": "^0.14.2",
