--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,6 +99,10 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
+    lintOptions {
+        abortOnError false
+    }
+
     defaultConfig {
         applicationId "com.bradzerdev.ivoc"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -108,6 +112,7 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -146,6 +151,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation "com.google.firebase:firebase-firestore:17.1.5"
     implementation "com.google.android.gms:play-services-base:16.0.1"
 }
 
