--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-navigation": "^3.0.9",
     "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "sync-storage": "^0.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
