--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-navigation": "^3.0.9",
     "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^6.0.0",
+    "realm": "^2.22.0",
     "redux": "^4.0.1",
     "sync-storage": "^0.3.0"
   },
