--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^6.0.0",
     "realm": "^2.22.0",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "sync-storage": "^0.3.0"
   },
   "devDependencies": {
