--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.6.3",
-    "reactotron-react-native": "^2.1.4"
+    "reactotron-react-native": "^2.1.4",
+    "reactotron-redux": "^2.1.3"
   },
   "jest": {
     "preset": "react-native"
