--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
-    "react-native-elements": "git+https://github.com/react-native-training/react-native-elements.git#next",
+    "react-native-elements": "1.0.0",
     "react-native-firebase": "^5.2.0",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-paper": "^2.4.0",
