--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -155,6 +155,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation "com.google.firebase:firebase-firestore:17.1.5"
     implementation "com.google.android.gms:play-services-base:16.0.1"
+    implementation "com.google.firebase:firebase-auth:16.1.0"
+    implementation "com.google.firebase:firebase-invites:16.0.6"
 }
 
 // Run this once to be able to run the application with BUCK
