--- a/package.json
+++ b/package.json
@@ -24,21 +24,9 @@
     "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^6.0.0",
     "realm": "^2.22.0",
-    "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
-    "sync-storage": "^0.3.0"
+    "redux": "^4.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "23.6.0",
-    "eslint": "^5.12.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.51.1",
-    "react-test-renderer": "16.6.3",
-    "reactotron-react-native": "^2.1.4",
-    "reactotron-redux": "^2.1.3"
   },
   "jest": {
     "preset": "react-native"
