--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,11 +144,10 @@ android {
 }
 
 dependencies {
-    compile project(':realm')
-    compile project(':react-native-firebase')
+    implementation project(':realm')
     implementation project(':react-native-firebase')
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-gesture-handler')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
