--- a/package.json
+++ b/package.json
@@ -27,6 +27,16 @@
     "redux": "^4.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "23.6.0",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.51.1",
+    "react-test-renderer": "16.6.3",
+    "reactotron-react-native": "^2.1.4",
+    "reactotron-redux": "^2.1.3"
   },
   "jest": {
     "preset": "react-native"
