--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "eslint-plugin-react-native": "^3.6.0",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.58.3",
