--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "eslint-plugin-react-native": "^3.6.0",
-    "mobx": "^5.9.0",
+    "mobx": "4.9.2",
     "mobx-react": "^5.4.3",
     "native-base": "^2.10.0",
     "react": "16.6.3",
