--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iVoc",
-  "version": "0.0.1",
+  "version": "0.9.3 beta",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "eslint-plugin-react-native": "^3.6.0",
     "mobx": "4.9.2",
     "mobx-react": "^5.4.3",
     "native-base": "^2.10.0",
@@ -16,31 +15,13 @@
     "react-native": "0.58.3",
     "react-native-elements": "1.0.0",
     "react-native-firebase": "^5.2.0",
-    "react-native-gesture-handler": "^1.0.12",
     "react-native-indicators": "^0.13.0",
-    "react-native-loading-spinner-overlay": "^1.0.1",
-    "react-native-paper": "^2.4.0",
     "react-native-popup-menu": "^0.14.2",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "react-navigation-material-bottom-tabs": "^1.0.0",
-    "react-redux": "^6.0.0",
-    "realm": "^2.22.0",
-    "redux": "^4.0.1"
+    "realm": "^2.22.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "23.6.0",
-    "eslint": "^5.12.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.51.1",
-    "react-test-renderer": "16.6.3",
-    "reactotron-react-native": "^2.1.4",
-    "reactotron-redux": "^2.1.3"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
