--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iVoc",
-  "version": "0.9.3 beta",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
