--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mobx": "4.9.2",
     "mobx-react": "^5.4.3",
     "native-base": "^2.12.0",
+    "ramda": "^0.26.1",
     "react": "16.6.3",
     "react-native": "^0.58.5",
     "react-native-elements": "1.0.0",
