--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mobx": "4.9.2",
     "mobx-react": "^5.4.3",
     "native-base": "^2.12.0",
+    "prettier": "^1.17.0",
     "react": "16.6.3",
     "react-native": "^0.59.4",
     "react-native-elements": "1.0.0",
