--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "^0.60.4",
     "react-native-elements": "1.0.0",
     "react-native-firebase": "^5.2.0",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-indicators": "^0.13.0",
     "react-native-paper": "^2.11.1",
     "react-native-popup-menu": "^0.14.2",
