--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "jsc-android": "^241213.1.0",
     "mobx": "4.9.2",
     "mobx-react": "^5.4.3",
     "native-base": "^2.13.4",
