--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^1.17.0",
     "react": "16.8.6",
     "react-native": "^0.60.4",
+    "react-native-animatable": "^1.3.2",
     "react-native-elements": "1.0.0",
     "react-native-firebase": "^5.2.0",
     "react-native-gesture-handler": "^1.3.0",
