--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,6 +146,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-snackbar')
     if (useIntlJsc) {
         implementation 'org.webkit:android-jsc-intl:+'
     } else {
@@ -155,6 +156,7 @@ dependencies {
     implementation project(':react-native-firebase')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-snackbar')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "androidx.appcompat:appcompat:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
