--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-indicators": "^0.13.0",
     "react-native-paper": "^2.11.1",
     "react-native-popup-menu": "^0.14.2",
+    "react-native-snackbar": "^2.0.2",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "react-navigation-material-bottom-tabs": "^1.0.0",
