--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mobx-react": "^5.4.3",
     "native-base": "^2.13.8",
     "prettier": "^1.17.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "^0.60.5",
     "react-native-animatable": "^1.3.2",
