--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "react-native-indicators": "^0.13.0",
     "react-native-paper": "^2.11.1",
     "react-native-popup-menu": "^0.14.2",
+    "react-native-reanimated": "^1.3.0",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-snackbar": "^2.0.2",
     "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^3.0.9",
+    "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^1.0.0",
+    "react-navigation-stack": "^1.9.3",
     "realm": "^2.22.0"
   },
   "devDependencies": {
