--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-animatable": "^1.3.2",
     "react-native-elements": "1.1.0",
     "react-native-firebase": "^5.2.0",
+    "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-indicators": "^0.13.0",
     "react-native-paper": "^2.11.1",
